# bid-assist

./: .env.example  .gitignore  Dockerfile  README.md  SPEC_bid_intelligence.md  SPEC_shared_analysis.md  TASKS.md  config.py  config.py   constants.py    docker-compose.yml  main.py  main.py    pal_rules.md  prompt.txt  pyproject.toml  requirements.txt  run.py  run_orchestrator.py
docs/: ARCHITECTURE.md  DECISION_LOG.md  PROMPT_LOG.md  TECH_SPEC.md
modules/: ai_helper.py  ai_helper.py    bidder.py  fetcher.py  fetcher.py    filter.py  filter.py     notifier.py  notifier.py   store.py
prompts/: pal_rules.md.example
prompts_yehia/: bid_writer.md
prompts_ymka/: bid_writer.md
src/: __init__.py  app.py  telegram_bot.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/config/: account.py  constants.py  loader.py  settings.py
src/core/: exceptions.py
src/filters/: __init__.py  base.py  blacklist_filter.py  budget_filter.py  country_filter.py  pipeline.py  skill_filter.py  tagger.py
src/models/: __init__.py  bid.py  project.py
src/orchestrator/: analyzer.py  bidder.py  cleanup.py  polling.py  services.py  telegram.py
src/services/: currency.py  github.py
src/services/ai/: __init__.py  analyzer.py  gemini_analyzer.py
src/services/freelancer/: __init__.py  bidding.py  client.py  projects.py
src/services/storage/: __init__.py  repo_adapter.py  repository.py  shared_repository.py  unified_repo.py
src/services/telegram/: __init__.py  bot.py  handlers.py  notifier.py
tests/: conftest.py  test_filters.py
